--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,6 +4,8 @@
 	<link href=popup.css rel=stylesheet>
 </head>
 <body>
+	<br>
+	<img src="../images/icon_2_128.png" width="64" height="64">
 	<h2>Spotify Ads Remover</h2>
 	<div id="text">
 		There aren't any Spotify pages open. To see ads getting removed, open or refresh a Spotify web player page.
